# Spot-Welder

./: .abacus.donotdelete  .gitignore  AGENTS.docx  AGENTS.md  BALANCER_SPECIFICATION.md  CHANGELOG_P4_UI_STABLE.md  ESP32_ARCHITECTURE_ANALYSIS.md  JOULE_ALGORITHM_FIX.md  KATAPULT_BOOTLOADER_SETUP.md  KNOWN_ISSUES.docx  KNOWN_ISSUES.md  MODE_SWITCHER_AND_JOULE_CLEANUP.md  PROTOCOL.docx  PROTOCOL.md  README.md  SD_AND_STM32_FLASHING_FEASIBILITY.docx  STATUS_TAB_UI_IMPROVEMENTS.md  WIRELESS_STM32_FLASH_EXPLAINED.docx  WIRELESS_STM32_FLASH_EXPLAINED.md
.logs/: 20260612-010523-937c80714b664b33b263210bd5495557.out  20260612-010523-c9ebcedf8c604720bed8bb64edbec7e5.out  20260612-013849-fb92f8c3a5ab4f83be4bc2844f10711d.out  20260612-015013-c81f8d1a2b7a4dbcb2b743e5255f31ff.out  20260612-022751-91c1eb7fde2a41f5a7affa6cfc282b64.out  20260612-022751-ecc9b8b8f2cf4c6fa685f4f641574e1c.out  20260612-023016-ca42bc973a134221902bee31471f8290.out  20260613-171128-4fe3fa5364764408bd3fc53f3f8e976b.out  20260613-180037-0337282002524bd99e85c689aa0366f1.out  20260613-184830-76b552cb154042a4b7865e2d6154f2fb.out  20260613-184830-9411d2d8e341404a92b60f38cb6b202c.out  20260613-185803-234263c586c5423893246d49a4fd5d64.out  20260613-193322-a10dfeaf518347c88fe81e7157113f44.out  20260613-193604-04198034bd944d47b04289443723f516.out  (+148 more)
ESP32P4/main/: CMakeLists.txt  arduino_compat.h  hello_world_main.c  hello_world_main.cpp  idf_component.yml  ota.cpp  ota.h  sd_flash.cpp  sd_flash.h  stm32_flash.cpp  stm32_flash.h  touch_gt911.c  touch_gt911.h  ui.cpp  ui.h  welder_main.cpp  wifi_bridge.cpp  wifi_bridge.h
(+110 files in other folders)
